chore(favicon): usar favicon.svg en lugar de data URL e incluir archivo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Atribución sugerida: "MDAITex: editor para textos generados por IA", Juan José
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MDAITex: editor para textos generados por IA</title>
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='12' ry='12' fill='%234a6fa5'/%3E%3Cpath d='M18 44h28L32 20z' fill='%23fff'/%3E%3C/svg%3E">
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
 
   <!-- Configuración de MathJax -->
   <script>
